--- a/amazon/index.html
+++ b/amazon/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Redux async example</title>
+    <link rel="stylesheet" href="./styles/_fonts.css">
   </head>
   <body>
     <div id="root">
