--- a/amazon/commercial/public/index.html
+++ b/amazon/commercial/public/index.html
@@ -28,6 +28,6 @@
   To create a production bundle, use `npm run build`.
 -->
 <div id="app"></div>
-<div id="test"></div>
+<!--<div id="test"></div>-->
 </body>
 </html>
